# byoctf_discord

./: .gitignore  README.md  SETUP.md  bigtest.py  bot_tests.py  byoctf.db  byoctf_discord.py  byoctf_discord_BASE_931339.py  challenge_validator_webapp.py  cheatsheet.txt  cli.py  ctrl_ctf.py  custom_secrets_template.py  dashboard.py  database.py  db_tests.py  default_users.json  example_challenge.json  locustfile.py  newreqs.txt  notes.txt  notes_for_challenge_types.txt  populateTestData.py  pyproject.toml  requirements.txt  requirements.txt.orig  scoreboard.py  settings.py  settings_template.py  startbot.sh  startweb.sh  tmp_test.py  video_script.md  vis.py
__diskcache__/: cache.db
byoctf_diskcache/: cache.db
example_challenges/: converter.py  dependent_challenge.json  dependent_challenge.toml  example_challenge.json  example_challenge.toml  example_challenge.yaml  example_toml_back_to_json.json  ext_validation_challenge.json  ext_validation_challenge.toml  malicious.toml  r3d.json  r3d.toml  r3d_multi_flag.toml  test.json  test.toml  xss_in_desc_test.toml
ext_validation_server/: flags.json  requirements.txt  server.py
src/byoctf_discord/: __init__.py
static/: challenge_builder.py  glitch.css  micropython.js  micropython.wasm  pyscript.js  script.js  style.css
templates/: index.html
templates/creator/: challenge_builder.py  creator.html
templates/scoreboard/: chall.html  challenges.html  hud.html  index.html  join.html  player.html  public_transactions.html  register.html  scores.html  submit.html  tip.html  transactions.html
(+1 files in other folders)
