[project]
name = "byoctf-discord"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Eli McRae", email = "shyft@shyft.us" }
]
dependencies = [
    "pony>=0.7.17",
    "diskcache>=5.6.3",
    "Faker>=20.0.3",
    "fire>=0.5.0",
    "flask>=3.0.0",
    "flask_cors>=4.0.0",
    "pynacl>=1.5.0",
    "networkx>=3.1",
    "pycryptodome>=3.19.0",
    "pyfiglet>=0.8.post1",
    "pyvis>=0.3.2",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "terminaltables>=3.1.10",
    "toml>=0.10.2",
    "typer>=0.9.0",
    "loguru>=0.7.2",
    "discord>=2.3.2",
    "gunicorn>=21.2.0",
    "markdown2>=2.4.10",
    "rich>=13.7.0",
    "flask-limiter==3.3.0",
    "ipython>=8.12.3",
    "psycopg2-binary>=2.9.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
